2_helloworld/openshift/deploymentconfig.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  generation: 1
  labels:
    app: helloworld
  name: helloworld
spec:
  replicas: 1

  selector:
    app: helloworld
    deploymentconfig: helloworld
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: helloworld
        deploymentconfig: helloworld
    spec:
      containers:
      - image: 172.30.1.1:5000/build/helloworld:latest
        imagePullPolicy: Always
        name: helloworld
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
